--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "lru-cache": "^11.2.2",
+    "openai": "^6.7.0",
+    "zod": "^4.1.12"
   }
 }
